# LinAlg

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: tinyeigenConfig.cmake.in
include/tinyeigen/: Matrix.h  Vector.h
src/: Matrix.cc  Vector.cc
tests/: matrix_tests.cc  vector_tests.cc
